@@ -1,3 +1,7 @@
+2011-03-10  Jilles Tjoelker <jilles@stack.nl>
+
+	* Replace GPL noclobberopen code with the FreeBSD version.
+
 2010-11-28  Maciej Żenczykowski <zenczykowski@gmail.com>
 
 	* Mark status as volatile in exitshell.
